# rusty-browser-manager

./: .gitignore  Cargo.toml  README.md
browser-for-remote/: Cargo.toml
browser-for-remote/src/: main.rs  utils.rs
remote-for-browser/: Cargo.toml
remote-for-browser/src/: main.rs  utils.rs
src/: utils.rs
