[package]
name = "remote-for-browser"
author = "John Jones <John@xoren.io>"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
headless_chrome = { version = "1.0.10" }
anyhow = "1.0"
serde_json = "1.0.117"
chrono = "0.4.38"
reqwest = { version = "0.12.4", features = ["blocking", "json", "multipart"] }
